--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,12 @@ jobs:
       - name: 🚀 Checkout repository
         uses: actions/checkout@v3
 
+      - name: Build project
+        run: |
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages  # 部署到 gh-pages 分支
-          folder: .  # 部署整个仓库，或指定静态文件目录，如 dist/
+          folder: dist  # 如果是构建项目，部署构建后的文件（如 dist/ 或 build/ 文件夹）
           token: ${{ secrets.GITHUB_TOKEN }}
